2011-06-13  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/player-icon.c, common/gtk/player-icon.h,
	common/gtk/common_gtk.c, common/log.c, common/log.h, server/gtk/main.c,
	server/gold.c, server/player.c, server/trade.c, server/server.h,
	server/pregame.c, NEWS, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/quote.c, client/gtk/chat.c, client/gtk/offline.c,
	client/gtk/gui.c, client/gtk/identity.c, client/gtk/connect.c,
	client/common/client.c, client/common/client.h,
	client/common/callback.c, client/common/player.c,
	client/help/C/pioneers.xml, client/ai/ai.c, client/ai/lobbybot.c:
	Change 'viewer' to 'spectator'.
	* meta-server/main.c, server/pregame.c, client/gtk/offline.c,
	client/common/player.c: Remove unused variables. Thanks to gcc-4.6 for
	finding them.

2011-06-05  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, client/callback.h, client/gtk/callbacks.c,
	client/gtk/name.c, client/gtk/frontend.h, client/gtk/offline.c,
	client/gtk/Makefile.am, client/gtk/connect.c, client/common/client.c,
	client/common/client.h, client/common/callback.c, client/ai/ai.h,
	client/ai/greedy.c, client/ai/Makefile.am, client/ai/ai.c,
	client/ai/lobbybot.c: Use NotifyingString as the only place to store
	the name and style of the player. Fix a race condition in connect.c
	which whould result in a crash when the dialog was shown after a failed
	connection. To be able to use NotifyingString, the initialisation of
	glib is split from the other init functions.
	* editor/gtk/editor.c: Fix compiler warning

2011-06-04  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/guimap.c, common/gtk/guimap.h, common/map.c, common/map.h:
	Replace detection of the location of the cursor on the map with
	GdkRegion by mathematics.

2011-05-31  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/gtkcompat.h, configure.ac, client/gtk/gui.c,
	client/gtk/connect.c: Restore compatibility with Debian Stable.
